# lvgl_rlottie_esp32

./: CMakeLists.txt  README.md  sdkconfig
components/rlottie/: CMakeLists.txt
components/rlottie/rlottie/inc/: rlottie_capi.h
components/rlottie/rlottie/src/vector/: vimageloader.cpp
main/: CMakeLists.txt  main.c
